name:                   base-io-access
version:                0.1.0.0
synopsis:               The IO functions included in base delimited into small, composable classes in order to safely restrict IO functions
license:                GPL-2
license-file:           LICENSE
author:                 Aaron Stevens
maintainer:             bheklilr2@gmail.com
category:               System
build-type:             Simple
cabal-version:          >=1.10

library
    exposed-modules:    Access.Control.Concurrent,
                        Access.Control.Concurrent.Chan,
                        Access.Control.Concurrent.MVar,
                        Access.Control.Concurrent.QSem,
                        Access.Control.Concurrent.QSemN,
                        Access.Control.Concurrent.SampleVar,
                        Access.Control.Exception,
                        Access.Control.Exception.Base,

                        Access.Data.IORef,
                        Access.Data.Unique,

                        Access.Debug.Trace,

                        Access.Foreign,
                        Access.Foreign.C,
                        Access.Foreign.C.Error,
                        Access.Foreign.C.String,
                        Access.Foreign.Concurrent,
                        Access.ForeignPtr.Safe,
                        Access.Foreign.Marshal.Alloc,
                        Access.Foreign.Marshal.Array,
                        Access.Foreign.Marshal.Error,
                        Access.Foreign.Marshal.Pool,
                        Access.Foreign.Marshal.Safe,
                        Access.Foreign.Marshal.Unsafe,
                        Access.Foreign.Marshal.Utils,
                        Access.Foreign.Ptr,
                        Access.Foreign.Safe,
                        Access.Foreign.StablePtr,
                        Access.Foreign.Storable,

                        Access.Prelude,

                        Access.System.CPUTime,
                        Access.System.Environment,
                        Access.System.Exit,
                        Access.System.IO,
                        Access.System.IO.Error,
                        Access.System.Mem,
                        Access.System.Mem.StableName,
                        Access.System.Mem.Weak,
                        Access.System.Timeout

    build-depends:      base >=4.6 && <4.7
    default-language:   Haskell2010
